function-calling tool support v1
